--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Dhesrune",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
     "axios": "^0.27.2",
     "discord.js": "^13.8.1",
     "flappy": "^1.0.0",
     "fs": "^0.0.1-security",
+    "glob": "^8.0.3",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
     "mysql": "^2.18.1",
