--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/builders": "^0.15.0",
     "axios": "^0.27.2",
     "discord.js": "^13.8.1",
+    "express": "^4.18.1",
     "flappy": "^1.0.0",
     "fs": "^0.0.1-security",
     "glob": "^8.0.3",
