--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "node": "16.6.1",
     "nodemon": "^2.0.12",
+    "reddit-fetch": "^1.5.1",
     "sharp": "^0.30.7",
     "slappey": "^3.0.0",
     "string-similarity": "^4.0.4"
