--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.11.0",
     "axios": "^0.27.2",
+    "bad-words": "^3.0.4",
     "discord-player": "^5.2.2",
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
