--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@discordjs/voice": "^0.11.0",
     "axios": "^0.27.2",
     "bad-words": "^3.0.4",
-    "discord-player": "^5.3.1",
+    "discord-player": "^4.1.4",
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -42,7 +42,10 @@
     "reddit-fetch": "^1.5.1",
     "sharp": "^0.30.7",
     "slappey": "^3.0.0",
+    "soundcloud-scraper": "^5.0.3",
+    "spotify-url-info": "^3.2.6",
     "string-similarity": "^4.0.4",
+    "youtube-sr": "^4.3.4",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.0"
   }
