--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "test": "echo \"No test specified\""
+    "test": "echo \"No test specified\"",
+    "lint": "eslint . --ext .js --ignore-pattern node_modules/"
   },
   "author": "Dhesrune",
   "license": "ISC",
@@ -48,5 +49,8 @@
     "youtube-sr": "^4.3.4",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0"
   }
 }
