--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml file generated for syrc-bot-vw on 2023-08-15T23:09:08-04:00
 
-app = "syrc-bot-vw"
+app = "syrcbot"
 kill_signal = "SIGINT"
 kill_timeout = 5
 mounts = []
